--- a/诊断测试1.html
+++ b/诊断测试1.html
@@ -2,17 +2,23 @@
 <body>
 <div id="result">等待检测...</div>
 <script>
-document.addEventListener('DOMContentLoaded', function() {
+// 不用 DOMContentLoaded，直接执行
+(function() {
     var data = window.TH_REMOTE_PARAMS;
     var resultDiv = document.getElementById('result');
+    
+    if (!resultDiv) {
+        alert("❌ 找不到 result div");
+        return;
+    }
     
     if (data && data.quote) {
         resultDiv.innerText = "✅ 成功读取全局变量！内容：" + data.quote.substring(0, 100);
         resultDiv.style.color = "green";
     } else {
-        resultDiv.innerText = "❌ 无法读取全局变量！window.TH_REMOTE_PARAMS = " + JSON.stringify(data);
+        resultDiv.innerText = "❌ 无法读取全局变量！\nwindow.TH_REMOTE_PARAMS = " + JSON.stringify(data);
         resultDiv.style.color = "red";
     }
-});
+})();
 </script>
 </body>
