Update and rename 夏3.html to 夏4.html

--- a/夏4.html
+++ b/夏4.html
@@ -1740,7 +1740,7 @@
         // Character configuration
         const CHARACTER_CONFIG = {
           user: {
-            name: '{{user}}',
+            name: substitudeMacros('{{user}}'),
             avatar: 'user_avatar',
           },
           char: {
